--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
-    "react-router": "^7.1.1"
+    "react-router": "^7.1.1",
+    "axios": "^1.7.8",
+    "joi": "^17.13.0",
+    "@hookform/resolvers": "^3.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
