--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-router": "^7.1.1",
+    "react-hook-form": "^7.54.1",
     "axios": "^1.7.8",
     "joi": "^17.13.0",
     "@hookform/resolvers": "^3.3.4"
