--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router": "^7.1.1",
     "axios": "^1.7.8",
     "joi": "^17.13.0",
-    "@hookform/resolvers": "^3.3.4"
+    "@hookform/resolvers": "^3.3.4",
+    "react-hook-form": "^7.54.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
